# mariadb_exporter

./: .gitignore  .justfile  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.mariadb  README.md  TESTING_SOCKET.md  mise.toml
.devcontainer/: README.md  compose.yaml  configure-git.sh  devcontainer.json  devcontainer.portable.json  grafana-dashboards.yml  init-db.sql  post-start.sh  postcreate.sh  prometheus.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  coverage.yml  release.yml  test.yml
contrib/debian/: postinst  preinst  prerm
contrib/prometheus/: prometheus.yml
contrib/systemd/: mariadb_exporter.env.example  mariadb_exporter.service
db/conf/: README.md  generate-ssl-certs.sh  my.cnf
grafana/: Dockerfile  README.md  dashboard.json  dashboard.json.backup  prometheus.yml.tmpl  stack-entrypoint.sh
grafana/provisioning/dashboards/: dashboard.yaml
scripts/: LOADTEST.md  METRICS_COVERAGE.md  README.md  TESTING.md  dev-ssh  dev-up  entrypoint-combined.sh  install-mariadb-client.sh  mariadb_loadtest.py  metrics-dev  monitor-exporter.sh  pre-commit-hook.sh  setup-exporter-user.sql  setup-local-test-db.sh  setup-test-tables.sh  start-exporter.sh  test-exporter-permissions.sh  test_metrics.sh  validate-dashboard.sh
scripts/benchmark/: README.md  check-soak.sh  run-soak.sh  soak-dashboard.json
src/: lib.rs
src/cli/actions/: run.rs
src/cli/commands/: collectors.rs  mod.rs
src/cli/dispatch/: mod.rs
src/collectors/: config.rs  mod.rs  register_macro.rs  registry.rs  util.rs
src/collectors/audit/: mod.rs
src/collectors/default/: mod.rs  plugins.rs  status.rs  version.rs
src/collectors/exporter/: mod.rs  process.rs  scraper.rs
src/collectors/innodb/: mod.rs  status.rs
src/collectors/locks/: metadata.rs  mod.rs  table_waits.rs
src/collectors/metadata/: mod.rs
src/collectors/query_response_time/: collector.rs  mod.rs
src/collectors/replication/: binlog.rs  mod.rs  replica_status.rs
src/collectors/schema/: mod.rs  tables.rs
src/collectors/statements/: mod.rs
src/collectors/tls/: certificate.rs  mod.rs  status.rs
src/collectors/userstat/: mod.rs
src/exporter/: mod.rs
src/exporter/handlers/: health.rs  metrics.rs  mod.rs
tests/: TESTING.md  collectors_tests.rs  connectivity_failure.rs  dashboard_comprehensive.rs  dashboard_validation.rs  exporter.rs  metrics_smoke.rs  regression_tests.rs  testcontainers.rs
tests/collectors/: README.md  common.rs  connection.rs  mod.rs
tests/collectors/default/: status.rs  version.rs
tests/collectors/innodb/: status.rs
tests/collectors/locks/: metadata_locks.rs  mod.rs
tests/collectors/metadata/: metadata_info.rs
tests/collectors/query_response_time/: mod.rs  query_response_time_info.rs
tests/collectors/replication/: mod.rs  replica_status.rs
tests/collectors/schema/: mod.rs  schema_info.rs
tests/collectors/statements/: mod.rs  perf_schema.rs
tests/collectors/tls/: mod.rs  tls_status.rs
tests/collectors/userstat/: mod.rs  userstat_info.rs
tests/common/: mod.rs
